--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ Crowd Course Python interactive learning.
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -10,7 +11,7 @@ Crowd Course Python interactive learning.
     <!--<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">-->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>Python 3 - Crowd Course - Stanford Engineering</title>
+    <title>Python 3</title>
     <!-- Load the required CSS libraries -->
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -18,13 +19,15 @@ Crowd Course Python interactive learning.
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/codemirror.css">
     <!-- Latest compiled and minified JavaScript -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="assets/js/jquery.js"></script>
     <script src="http://www.skulpt.org/static/skulpt.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/static/skulpt-stdlib.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="assets/js/codemirror.js"></script>
+    <script src="assets/js/codemirror-python.js"></script>
     <!-- Bootcards CSS file (different for desktop, iOS and Android, included Bootstrap CSS) -->
     <link href="assets/css/bootcards-desktop.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script>
     var isDesktop = true;
     </script>
@@ -36,12 +39,8 @@ Crowd Course Python interactive learning.
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
       <![endif]-->
-      <style type="text/css" media="screen">
-          #editor {
-      height: 300px;
-          }
-      </style>
 </head>
+
 <body id="bootcards">
     <!-- fixed top navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -61,24 +60,32 @@ Crowd Course Python interactive learning.
             <button type="button" class="btn btn-default btn-menu navbar-left pull-left offCanvasToggle" data-toggle="offcanvas">
                 <i class="fa fa-lg fa-bars"></i><span>Menu</span>
             </button>
-            <a class="navbar-brand no-break-out" title="Python 3 - Crowd Course" href="#">Python 3 - Crowd Course</a>
+            <a class="navbar-brand no-break-out" title="Python 3 - Crowd Course" href="#"><img src="assets/images/logo_small.png" style="margin-top: -5% !important;" class="img-responsive" alt="Responsive image" height="20"></a>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#" data-pjax="#main" data-title="Customers" <i="" class="fa fa-home">
-              Home
-            </a>
-                    </li>
-                    <li>
-                        <a href="#" data-pjax="#main" data-title="Companies" <i="" class="fa fa-book">
-              Syllabus
-            </a>
-                    </li>
-                    <li>
-                        <a href="#" data-pjax="#main" data-title="Contacts" <i="" class="fa fa-users">
-              Contact
-            </a>
-                    </li>
+                    <li><a href="#" data-pjax="#main" data-title="Customers" <i="" class="fa fa-home"><b>Home</b></a></li>
+                    <li><a href="#" data-pjax="#main" data-title="Companies" <i="" class="fa fa-book"><b>Syllabus</b></a></li>
+                    <li><a href="#" data-pjax="#main" data-title="Contacts" <i="" class="fa fa-users"><b>Contact</b></a></li>
+                </ul>
+                <ul class="nav navbar-nav" style="margin-top: 1% !important; margin-left: 10% !important; width: 40% !important;">
+                	<div class="input-group form-group">
+  						<input type="text" class="form-control" placeholder="Browse Course Catalog..."><span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+					</div>
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+          			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><b>Tejas Sarma</b>
+          			<span class="caret"></span></a>
+          			<ul class="dropdown-menu">
+            			<li><a href="#"><b>Account</b></a></li>
+            			<li><a href="#"><b>My Courses</b></a></li>
+            			<li><a href="#"><b>Preferences</b></a></li>
+            			<li role="separator" class="divider"></li>
+            			<li><a href="#"><b>Sign Out</b></a></li>
+          			</ul>
+        			</li>
+        			<li><img src="assets/images/profile.png" class="img-responsive img-circle" alt="Responsive image" style="margin-top: 10% !important;"></li>
                 </ul>
             </div>
         </div>
@@ -104,13 +111,10 @@ Crowd Course Python interactive learning.
         </ul>
         <div style="margin-top:20px; padding-left: 20px; font-size: 12px; color: #777">v1.1.2</div>
     </nav>
-
-
-
     <div class="container bootcards-container" id="main">
-      <div class="row">
-        <div class="col-sm-12">
-        <nav>
+        <div class="row">
+        	<div class="col-sm-12">
+        <!-- <nav>
           <ul class="pagination">
             <li>
               <a href="#" aria-label="Previous">
@@ -131,63 +135,129 @@ Crowd Course Python interactive learning.
             </li>
           </ul>
         </nav>
-      </div>
-      </div>
-        <div class="row">
-            <div class="bootcards-cards">
-                <div class="col-sm-6">
+      </div> -->
+            <div class="bootcards-cards" style="margin-left: -20% !important; margin-right: -20% !important;">
+                <div class="col-sm-2 bootcards-list" id="list" data-title="Contacts">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <h2><b>Course Content</b></h2>
+                        </div>
+                        <div class="panel-body">
+                            <h3><b>Python Basics</b></h3>
+                        </div>
+                        <div class="list-group">
+                            <a class="list-group-item pjax" href="#intro">
+                                <h4 class="list-group-item-heading">Numbers</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Strings</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Simple Algorithms</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Lists</h4>
+                            </a>
+                        </div>
+                        <div class="panel-body">
+                            <h3><b>Advanced Python</b></h3>
+                        </div>
+                        <div class="list-group">
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Control flow tools</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Functions</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Data Structures</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Classes</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Recursion</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Assertions and exemptions</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Efficiency and Orders of Growth - Time</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Modules</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">File I/O</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Errors and Exceptions</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Memory and Search</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Multithreading</h4>
+                            </a>
+                            <a class="list-group-item pjax" href="#datatypes">
+                                <h4 class="list-group-item-heading">Network & Sockets</h4>
+                            </a>
+                        </div>
+                    </div> 
+                </div>
+                <div class="col-sm-5">
                     <div>
                         <div class="panel panel-default bootcards-chart">
                             <div class="panel-heading">
-                                <h3 class="panel-title">Video</h3>
+                                <h3 class="panel-title">Introduction to Python</h3>
                             </div>
                             <div>
                                 <!--bar chart-->
                                 <div class="embed-responsive embed-responsive-16by9">
-                                    <div id="video-placeholder"></div>
+                                    <iframe class="embed-responsive-item" src="https://youtube.com/embed/Oe6rHPmFY3o"></iframe>
                                 </div>
+                            </div>
+                            <div class="panel-footer">
+                                <small class="pull-left">Stanford Crowdcourse Initiative</small>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div>
+                <div class="col-sm-5">    
+                        <div>
+                            <div class="panel panel-default bootcards-chart">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Try out your code</h3>
+                                </div>
+                                <div>
+                                    <!--code goes here-->
+                                    <form role="form" id="code-form" onsubmit="runit()">
+                                        <div class="form-group">
+                                            <textarea id="yourcode"># Try out your code here</textarea>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="panel-footer">
+                                    <button class="btn btn-default btn-block" form="code-form">
+                                        <i class="fa fa-play"></i> Run
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                         <div class="panel panel-default bootcards-chart">
                             <div class="panel-heading">
-                                <div class="btn-group" role="group" aria-label="...">
-                                  <button type="button" onclick="runit()" class="btn btn-default"><i class="fa fa-play"></i></button>
-                                  <button type="button" onclick="showeidtor()" class="btn btn-default"><i class="fa fa-pencil-square-o"></i></button>
-                                  <button type="button" class="btn btn-default"><i class="fa fa-question-circle"></i></button>
-                                </div>
+                                <h3 class="panel-title">Output</h3>
                             </div>
                             <div>
-                                <!--bar chart-->
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <div id="editor"></div>
-                                    <pre id="output" display = "none"></pre>
-                                </div>
+                                <!--code goes here-->
+                                <pre id="output">...Output...</pre>
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-          <div class="col-sm-12">
-                  <div class="panel panel-default bootcards-chart">
-                      <div class="panel-heading">
-                          <h3 class="panel-title">Info board</h3>
-                      </div>
-                      <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="assets/info_panel/while_loop.html"></iframe>
-                      </div>
-
-                  </div>
-          </div>
-        </div>
     </div>
-    <span id="current-time">0:00</span> / <span id="duration">0:00</span>
     <!-- fixed tabbed footer -->
     <div class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
@@ -196,71 +266,51 @@ Crowd Course Python interactive learning.
             </div>
         </div>
     </div>
+    <script type = "text/javascript">
+        // output functions are configurable.  This one just appends some text
+        // to a pre element.
 
-    <script src="assets/js/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script>
-        //Initializing ace editor
-        var editor = ace.edit("editor");
-        editor.setTheme("ace/theme/monokai");
-        editor.getSession().setMode("ace/mode/python");
-        var session = editor.session;
-        //Initializing typing function
-        function say(str) {
-        (function iterator(index) {
-            if (index < str.length) {
-              session.insert({row: session.getLength(),column: 0}, str.charAt(index))
-                setTimeout(function () {
-                    iterator(++index);
-                }, 0);
-            }
-        })(0);
+        var codeMirror  = CodeMirror.fromTextArea(document.getElementById("yourcode"), {
+          lineNumbers: true
+        });
+
+        function outf(text) {
+            var mypre = document.getElementById("output");
+            mypre.innerHTML = mypre.innerHTML + text;
         }
 
-    // output functions are configurable.  This one just appends some text
-    // to a pre element.
-    function outf(text) {
-        var mypre = document.getElementById("output");
-        mypre.innerHTML = mypre.innerHTML + text;
-    }
-    function builtinRead(x) {
-        if (Sk.builtinFiles === undefined || Sk.builtinFiles["files"][x] === undefined)
+        function builtinRead(x) {
+            if (Sk.builtinFiles === undefined || Sk.builtinFiles["files"][x] === undefined)
                 throw "File not found: '" + x + "'";
-        return Sk.builtinFiles["files"][x];
-    }
-    function sleepFor( sleepDuration ){
-        var now = new Date().getTime();
-        while(new Date().getTime() < now + sleepDuration){ /* do nothing */ }
-    }
-    // Here's everything you need to run a python program in skulpt
-    // grab the code from your textarea
-    // get a reference to your pre element for output
-    // configure the output function
-    // call Sk.importMainWithBody()
-    function runit() {
-       var prog = editor.getValue();
-       var mypre = document.getElementById("output");
-       mypre.innerHTML = '';
-       Sk.canvas = "mycanvas";
-       Sk.pre = "output";
-       Sk.configure({output:outf, read:builtinRead});
-       try {
-          sleepFor(1);
-          eval(Sk.importMainWithBody("<stdin>",false,prog));
-          state='true';
-          $('#editor').hide();
-          player.playVideo();
-       }
-       catch(e) {
-           alert(e.toString())
-           state='false';
-           //player.pauseVideo();
-       }
-    }
-    function showeidtor(){
-      $('#editor').show();
-    }
+            return Sk.builtinFiles["files"][x];
+        }
+        // Here's everything you need to run a python program in skulpt
+        // grab the code from your textarea
+        // get a reference to your pre element for output
+        // configure the output function
+        // call Sk.importMainWithBody()
+        function runit() {
+            var prog = document.getElementById("yourcode").value;
+            var mypre = document.getElementById("output");
+            mypre.innerHTML = '';
+            Sk.pre = "output";
+            Sk.configure({
+                output: outf,
+                read: builtinRead
+            });
+            (Sk.TurtleGraphics || (Sk.TurtleGraphics = {})).target = 'mycanvas';
+            var myPromise = Sk.misceval.asyncToPromise(function() {
+                return Sk.importMainWithBody("<stdin>", false, prog, true);
+            });
+            myPromise.then(function(mod) {
+                    console.log('success');
+                },
+                function(err) {
+                    console.log(err.toString());
+                });
+            return false;
+        }
     </script>
-
     <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="assets/js/script.js"></script>
