--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="col-sm-6">
                     <div class="panel panel-default bootcards-chart">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Video</h3>
+                            <h3 id="video-title" class="panel-title">Video</h3>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
                             <div id="video-placeholder" class="embed-responsive-item"></div>
@@ -250,6 +250,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/load-content.js"></script>
 </body>
 
 </html>
