Dynamic Naviagation panel with complete navigation events handled

--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
                         <li>
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Introduction</a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Why Python ?</a></li>
-                                <li><a href="#">Setup</a></li>
-                                <li><a href="#">Intructions</a></li>
+                                <li><a class="module" module="1" href="#">Why Python ?</a></li>
+                                <li><a class="module" module="2" href="#">Setup</a></li>
+                                <li><a class="module" href="#">Instructions</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Basics</a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Numbers, Operators and Operations</a></li>
-                                <li><a href="#">Input and Output Operations</a></li>
-                                <li><a href="#">Strings</a></li>
-                                <li><a href="#">Lists</a></li>
+                                <li><a class="module" href="#">Numbers, Operators and Operations</a></li>
+                                <li><a class="module" href="#">Input and Output Operations</a></li>
+                                <li><a class="module" href="#">Strings</a></li>
+                                <li><a class="module" href="#">Lists</a></li>
                             </ul>
                         </li>
                         <li>
