Put the current time into the container for better view

--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
                 </div>
             </div>
         </div>
+        <!-- Putting this into the container for now -->
+        <span id="current-time">0:00</span> / <span id="duration">0:00</span>
     </div>
-    <span id="current-time">0:00</span> / <span id="duration">0:00</span>
     <div class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <div class="bootcards-desktop-footer clearfix">
