--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             left: -300px;
             top: 50px;
             height: 100%;
+            height: auto;
             width: 300px;
             padding: 10px;
             transition: left 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
