--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                     <div class="panel panel-default bootcards-chart">
                         <div class="panel-heading">
                             <div class="btn-group" role="group" aria-label="...">
-                                <button type="button" onclick="runIt()" class="btn btn-default"><i class="fa fa-play"></i></button>
-                                <button type="button" onclick="showEditor()" class="btn btn-default"><i class="fa fa-pencil-square-o"></i></button>
+                                <button type="button" onclick="runIt()" class="btn btn-default"><i class="fa fa-play" data-content="Try this!"></i></button>
+                                <button type="button"  onclick="showEditor()" class="btn btn-default"><i class="fa fa-pencil-square-o"></i></button>
                                 <button type="button" class="btn btn-default"><i class="fa fa-question-circle"></i></button>
                             </div>
                         </div>
@@ -255,7 +255,7 @@
             <div class="col-sm-12">
                 <div class="panel panel-default bootcards-chart">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Info board</h3>
+                        <h3 class="panel-title">Notes</h3>
                     </div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="assets/info_panel/while_loop.html"></iframe>
