--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             transition: left 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
             overflow: hidden;
             box-sizing: border-box;
+            font-size: 12px;
         }
         #toggle {
             position:absolute;
